[gd_scene load_steps=6 format=3 uid="uid://dpmrcq0tokr2d"]

[ext_resource type="FontFile" uid="uid://d2srfwq605q6o" path="res://Assets/Pixellari.ttf" id="1_5vw8s"]
[ext_resource type="Script" path="res://Scripts/quest_quest.gd" id="1_067ja"]
[ext_resource type="Script" path="res://Scripts/Resource Scripts/TotalCollectionQuest.gd" id="2_for5u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qp4ib"]
bg_color = Color(0.823529, 0.705882, 0.54902, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.27451, 0.211765, 0.12549, 1)

[sub_resource type="Resource" id="Resource_0uhtb"]
script = ExtResource("2_for5u")
needed_amount = 10
quest_name = "Amature Hour"
description = "Catch 10 Fish"
level_unlock = 0
money_reward = 200

[node name="quest_quest" type="Label"]
custom_minimum_size = Vector2(900, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -252.0
offset_bottom = -548.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qp4ib")
script = ExtResource("1_067ja")
quest = SubResource("Resource_0uhtb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_left = 10.0
offset_right = 890.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(680, 0)
layout_mode = 2
alignment = 1

[node name="quest_name" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5vw8s")
theme_override_font_sizes/font_size = 26

[node name="quest_description" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5vw8s")
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="progress" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5vw8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="money_reward" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5vw8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gear_reward" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5vw8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 715.0
offset_top = 11.0
offset_right = 889.0
offset_bottom = 85.0
text = "Claim!"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
